create & update room with image done
