# presenter/handler/docs/swagger.json
@@ -203,13 +203,11 @@
                 "summary": "Save reservation",
                 "parameters": [
                     {
-                        "description": "Reservation Request",
-                        "name": "reservation",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/model.ReservationRequest"
-                        }
+                        "type": "integer",
+                        "description": "Inquiry ID",
+                        "name": "inquiry_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -286,13 +284,13 @@
             }
         },
         "/reservations/{id}": {
-            "post": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
                     }
                 ],
-                "description": "Mendapatkan reservation berdasarkan id",
+                "description": "Mendapatkan reservation",
                 "consumes": [
                     "application/json"
                 ],
@@ -325,8 +323,8 @@
                             "$ref": "#/definitions/response.APIResponse"
                         }
                     },
-                    "404": {
-                        "description": "Not Found",
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "$ref": "#/definitions/response.APIResponse"
                         }
